--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
+    "@shopify/react-native-skia": "0.1.196",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-skia-shadow": "^1.1.0",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
